[NNO-12689] - Списковые поля. Добавить возможность показывать разные имена в выпадающем списке и в самом поле